--- a/styles/style.css
+++ b/styles/style.css
@@ -212,3 +212,5 @@ footer img {
   margin-bottom: 63px;
 }
 /* ----------------------------------------------------------- */
+/* media queries */
+
